--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Learnig some tips in React",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "format": "prettier \"src/**/*.{js, html}\" --write",
-      "lint": "eslint \"src/**/*.{js, html}\" --quite"
+    "lint": "eslint \"src/**/*.{js, html}\" --quiet"
   },
   "repository": "git@github.com:brunoalfred/React.git",
   "author": "Bruno Alfred <alfredybruno@gmail.com>",
@@ -13,6 +14,11 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
