--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "extends": ["eslint:recommended", "prettier", "prettier/react"],
-    "plugins": [],
+    "rules": {"react-hooks/rules-of-hooks": "error"},
+    "plugins": ["react-hooks"],
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
