--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
