--- a/package.json
+++ b/package.json
@@ -4,23 +4,21 @@
   "description": "Learnig some tips in React",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "format": "prettier \"src/**/*.{js, html}\" --write",
-    "lint": "eslint \"src/**/*.{js, html}\" --quiet"
+    "dev": " public/index.html"
+ 
   },
   "repository": "git@github.com:brunoalfred/React.git",
   "author": "Bruno Alfred <alfredybruno@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "parcel-bundler": "^1.12.4",
+    "flow-bin": "^0.131.0",
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "@frontendmasters/pet": "^1.0.3",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rome": "^10.0.3-beta"
-  }
+  },
+  "type": "module"
 }
